# group

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarking/: CMakeLists.txt  creation.cpp  get.cpp
benchmarking/creation/: main.cpp
benchmarking/giant_group/: group.cpp  run.sh  tuple.cpp
compile_benchmarking/: CMakeLists.txt
compile_benchmarking/construction_and_get/: group.cpp  run.sh  tuple.cpp
compile_benchmarking/construction_only/: group.cpp  run.sh  tuple.cpp
include/nass/: group.hpp
include/nassgroup/: group.hpp
source/nassgroup_tests/: tests.cpp
tests/: CMakeLists.txt  tests.cpp
